# dev_agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: main.py
app/agents/: base.py  code_explainer.py  dependency_analyzer.py  env_builder.py  pipeline.py  repo_scanner.py  test_runner.py
app/api/: auth_routes.py  routes.py  ws_routes.py
app/core/: auth.py  config.py  heartbeat.py  job_store.py  logger.py  rate_limit.py  repo_cloner.py
app/db/: models.py  pg_job_store.py
app/schemas/: job.py
frontend/: index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AgentPanel.tsx  DependencyGraph.tsx
frontend/src/hooks/: useJobStream.ts
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx
tests/: test_agents.py  test_upgrades.py
